--- a/css/pgGetMobileRates.css
+++ b/css/pgGetMobileRates.css
@@ -12,8 +12,9 @@ h4
 .cl_pg_div_header_top
 {
 	text-align: center;
-	background-color: rgba(200,10,60,1);
-	/*
+	/*background-color: rgba(200,10,60,1); 
+	background-color: yellow; 
+	
 	background: -moz-linear-gradient(135deg, rgba(250,250,200,1) 0%, rgba(250,250,40,1) 100%);
 	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(250,250,200,1)), color-stop(100%, rgba(250,250,40,1)));
 	background: -webkit-linear-gradient(135deg, rgba(250,250,200,1) 0%, rgba(250,250,40,1) 100%);
@@ -21,6 +22,7 @@ h4
 	background: -ms-linear-gradient(135deg, rgba(250,250,200,1) 0%, rgba(250,250,40,1) 100%); 
 	background: linear-gradient(135deg, rgba(200,0,0,1) 0%, rgba(15,15,15,1) 100%);
 	*/
+	background-image: url("../images/bk_grad1.png");	
 	border: 0px;
 }
 
@@ -62,7 +64,7 @@ h4
 	padding: 10px 0px;
 	color: black;
 	font-family: arial;
-	font-size: 4vh;
+	font-size: 15pt;
 	font-weight: normal;
 }
 
@@ -80,9 +82,9 @@ h4
 	text-align:center;
 	padding: 10px 0px;
 	color: black;
-	font-family: sans-serif;
+	font-family: arial;
 	font-size: 14pt;
-	font-weight: normal;	
+	font-weight: bold;	
 	background-color: rgba(250,140,20,1);
 	/*
 	background: -moz-linear-gradient(135deg, rgba(250,250,200,1) 0%, rgba(250,250,40,1) 100%);
@@ -99,7 +101,7 @@ h4
 	text-align:center;
 	color: black;
 	font-family: sans-serif;
-	font-size: 3vh;
+	font-size: 14pt;
 	font-weight: normal;		
 	
 }
@@ -108,7 +110,7 @@ h4
 .cl_td_symbol_data
 {
 	text-align:center;
-	padding: 2vh 0px;
+	padding: 12px 0px;
 	
 }
 
@@ -117,7 +119,7 @@ h4
 	text-align:center;
 	color: black;
 	font-family: arial;
-	font-size: 3.5vh;
+	font-size: 14pt;
 	font-weight: normal;
 	
 }
@@ -194,6 +196,7 @@ h4
 	background: -ms-linear-gradient(135deg, rgba(250,250,200,1) 0%, rgba(250,250,40,1) 100%); 
 	background: linear-gradient(135deg, rgba(200,0,0,1) 0%, rgba(15,15,15,1) 100%);
 	*/
+	background-image: url("../images/bk_grad2.png");	
 	margin-top: 10px ;
 	
 }
