--- a/css/pgGetMobileRates.css
+++ b/css/pgGetMobileRates.css
@@ -63,7 +63,7 @@ h4
 	text-align:center;
 	padding: 10px 0px;
 	color: black;
-	font-family: arial;
+	font-family: 'Roboto Slab', serif;
 	font-size: 15pt;
 	font-weight: normal;
 }
@@ -82,10 +82,15 @@ h4
 	text-align:center;
 	padding: 10px 0px;
 	color: black;
-	font-family: arial;
+	/*font-family: arial;
 	font-size: 14pt;
-	font-weight: bold;	
+	font-weight: bold; */
+	
+	font-family: 'Bree Serif', serif;
+	font-size: 14pt;
+	font-weight: normal;	
 	background-color: rgba(250,140,20,1);
+	background-image: url("../images/bk_grad3.png");	
 	/*
 	background: -moz-linear-gradient(135deg, rgba(250,250,200,1) 0%, rgba(250,250,40,1) 100%);
 	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(250,250,200,1)), color-stop(100%, rgba(250,250,40,1)));
@@ -100,7 +105,7 @@ h4
 {
 	text-align:center;
 	color: black;
-	font-family: sans-serif;
+	font-family: 'Roboto Slab', serif;
 	font-size: 14pt;
 	font-weight: normal;		
 	
@@ -118,8 +123,8 @@ h4
 {
 	text-align:center;
 	color: black;
-	font-family: arial;
-	font-size: 14pt;
+	font-family: 'Roboto Slab', serif;
+	font-size: 15pt;
 	font-weight: normal;
 	
 }
@@ -203,7 +208,7 @@ h4
 .cl_pg_marq_scrollMsg
 {
 	padding: 5px 0px; 
-	font-family: arial;
+	font-family: 'Roboto Slab', serif;
 	font-size: 10pt;
 	font-weight: normal;
 
@@ -211,21 +216,21 @@ h4
 
 .cl_pg_span_contact_label
 {
-	font-family: sans-serif;	
+	font-family: 'Roboto Slab', serif;
 	font-weight: bold;
 	font-size: 12pt;
 }
 
 .cl_pg_span_contact1
 {
-	font-family: sans-serif;
+	font-family: 'Roboto Slab', serif;
 	font-size: 12pt;
 	color: #64FF5E;
 }
 
 .cl_pg_span_contact2
 {
-	font-family: sans-serif;
+	font-family: 'Roboto Slab', serif;
 	font-size: 12pt;	
 	color: #FFEA4A;
 }
